<resources>
    <string name="app_name">EL Cous</string>
    <string name="top_bar_home">Acceuil</string>
    <string name="top_bar_schedules">Horaires prévus</string>
    <string name="top_bar_admin">Espace administrateur</string>
    <string name="itinerary">Itinéraire</string>
    <string name="choose">Choisissez votre adresse de départ et votre déstination.</string>
    <string name="departure">Départ</string>
    <string name="destination">Arrivée</string>
    <string name="search">Rechercher</string>
    <string name="welcome_text0">Ne ratez plus votre Cous, quelques minutes vous suffiront pour vous renseigner.</string>
    <string name="welcome_text1">Simple, rapide et sécurisé</string>
    <string name="welcome_button">C’est Parti !</string>
    <string name="loading">Patientez svp…</string>
    <string name="empty_database_error">Une erreur est survenue, Assurez que vous avez une connexion internet stable et réessayez.</string>
    <string name="search_results">Résultat de la recherche:</string>
    <string name="enter_admin_key">Veuillez saisir la clé administrateur:</string>
    <string name="admin_key">Clé administrateur</string>
    <string name="confirm">Confirmer</string>
    <string name="wrong_key">Mauvaise clé, veuillez réessayer</string>
    <string name="you_are_admin">Vous êtes adminstrateur</string>
    <string name="uni_to_stop">Univ -> Arret</string>
    <string name="stop_to_uni">Arret -> Univ</string>
    <string name="admin_details">Ici vous pouvez ajoutez des trajets.\nVous pouvez aussi supprimer des trajets depuis leur page details appropriée.</string>
    <string name="cancel">Annuler</string>
    <string name="caution">Avertissement</string>
    <string name="confirm_report">Signaler un retard?</string>
    <string name="confirm_remove_report">Retirer votre signalement?</string>
    <string name="delete_route">Êtes-vous sûr de vouloir definitivement supprimer ce trajet?</string>
    <string name="reported_delays0">Retard signalé par</string>
    <string name="reported_delays1">étudiant(s) aujourd\'hui</string>
    <string name="add_report">Êtes-vous sûr de vouloir signaler un retard pour cet horaire?</string>
    <string name="remove_report">Êtes-vous sûr de vouloir annuler votre signalement de retard pour cet horaire?</string>
    <string name="help">Aide</string>
    <string name="help_title">EL Cous, c\'est quoi?</string>
    <string name="help_description">EL Cous est une application de gestion des horaires pour les bus Universitaire "Cous".\nElle vous permet de rechercher tous les horaires disponible pour chaque trajet de bus, vous pouver aussi signaler le retard d\'un bus si vous êtes sur place pour informer les autres étudiants.\n\nLes administrateurs peuvent également accéder a l\'espace administrateur avec la clé pour ajouter ou supprimer des trajets.</string>
    <string name="_return">Retour</string>
</resources>