<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background_shape"
    android:padding="10dp">


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/staticDepartureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/departure"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/staticDestinationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/destination"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/staticDepartureTextView"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="@+id/staticDepartureTextView"
                app:layout_constraintStart_toStartOf="@+id/staticDepartureTextView"
                app:layout_constraintTop_toBottomOf="@+id/staticDepartureTextView"
                app:srcCompat="@drawable/points" />

            <TextView
                android:id="@+id/currentDepartureTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/nunito_regular"
                android:textSize="18sp"
                android:text="@string/loading"
                app:layout_constraintBottom_toBottomOf="@+id/staticDepartureTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/staticDepartureTextView"
                app:layout_constraintTop_toTopOf="@+id/staticDepartureTextView" />

            <TextView
                android:id="@+id/currentDestinationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/nunito_regular"
                android:textSize="18sp"
                android:text="@string/loading"
                app:layout_constraintBottom_toBottomOf="@+id/staticDestinationTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/currentDepartureTextView"
                app:layout_constraintTop_toTopOf="@+id/staticDestinationTextView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/search_results"
                android:textColor="@color/main_orange"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staticDestinationTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/schedulesRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/empty_database_error"
                android:textColor="@color/second_text"
                android:visibility="gone"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>