<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background_shape"
    android:padding="10dp">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/itineraryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/itinerary"
                android:textColor="@color/main_orange"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/chooseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/choose"
                android:textColor="@color/second_text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/itineraryTextView"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/departureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginStart="20dp"
                android:textSize="15sp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/departure"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/chooseTextView" />

            <TextView
                android:id="@+id/destinationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/destination"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/departureTextView"
                app:layout_constraintStart_toStartOf="@+id/departureTextView"
                app:layout_constraintTop_toBottomOf="@+id/departureTextView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20sp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/departureTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/departureTextView"
                app:srcCompat="@drawable/pin" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/destinationTextView"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/destinationTextView"
                app:srcCompat="@drawable/finish" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/points" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/spinner_background"
                app:layout_constraintBottom_toBottomOf="@id/departureTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/departureTextView"
                app:layout_constraintTop_toTopOf="@+id/departureTextView">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/departureSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:ms_arrow_tint="@color/main_orange"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="TEST"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/departureSpinnerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/spinner_background"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@id/destinationTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/destinationTextView"
                app:layout_constraintTop_toTopOf="@+id/destinationTextView">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/destinationSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="TEST"
                    app:ms_arrow_tint="@color/main_orange" />

            </LinearLayout>

            <Button
                android:id="@+id/searchButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/search"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/departureSpinnerLayout"
                app:layout_constraintStart_toStartOf="@+id/departureSpinnerLayout"
                app:layout_constraintTop_toBottomOf="@+id/departureSpinnerLayout"
                app:strokeColor="@color/main_orange"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>